<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/trees"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/_1"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"

        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/_4"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"

        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/_7"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/button_delete"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"

        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/_2"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"

        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/_5"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/_8"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@id/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/_0"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_dot"
        app:layout_constraintStart_toEndOf="@id/button_delete"
        app:layout_constraintTop_toBottomOf="@id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/_3"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@id/button_divide"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/_6"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/_9"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/button_dot"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@id/button_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/delete"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/plus"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toBottomOf="@id/button_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equal"
        android:layout_width="368dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/blue"
        android:text="@string/equal"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_plus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_delete"
        app:layout_constraintTop_toBottomOf="@+id/button_0"
        app:layout_constraintVertical_bias="0.033" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/minus"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@id/button_multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/multiply"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@id/button_divide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_divide"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/divide"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_dot"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/dot"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintTop_toBottomOf="@id/button_9" />

    <TextView
        android:id="@+id/Numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>